# ComputerVision_Classification

./: .env.sample  .gitignore  README.md  pyproject.toml
core/: config.py
training/: train_alexnet.py  train_lenet.py
utility/: load_data.py  neural_net_func.py  transform_data.py
