[project]
name = "computervision-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
